[gd_scene load_steps=6 format=3 uid="uid://cbbp8m5aqij4a"]

[ext_resource type="Script" uid="uid://dqldrmdmvgesw" path="res://enemy.gd" id="1_pwjut"]
[ext_resource type="Texture2D" uid="uid://clrn2ga1px0df" path="res://texture/Without Sword (for gun)/shadow.png" id="2_n0g06"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_otto8"]
radius = 3.95348
height = 11.9217

[sub_resource type="SpriteFrames" id="SpriteFrames_7k104"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4gyqm"]
radius = 6.29072

[node name="enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_pwjut")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["player"]]
position = Vector2(0, 1)
scale = Vector2(0.758825, 0.838806)
shape = SubResource("CapsuleShape2D_otto8")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(0, 3)
scale = Vector2(0.591343, 0.830172)
texture = ExtResource("2_n0g06")
metadata/_edit_lock_ = true

[node name="body" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="body"]
z_index = 1
position = Vector2(5, 0)
scale = Vector2(0.403432, 0.5)
sprite_frames = SubResource("SpriteFrames_7k104")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
scale = Vector2(0.476893, 0.24989)
shape = SubResource("CapsuleShape2D_4gyqm")
debug_color = Color(0.7, 0, 0.175, 0.32549)

[connection signal="animation_changed" from="body/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="animation_finished" from="body/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
